syntax = "proto3";

package auth;

import "google/protobuf/empty.proto";

message AuthResponse {
  string access_token = 1;
  string refresh_token = 2;
  string token_type = 3;
  int64 expires_in = 4;
}

message AuthBasicLoginRequest {
  string email = 1;
  string password = 2;
}

message AuthBasicRegisterRequest {
  string email = 1;
  string password = 2;
}

message AuthBasicUpdatePassword {
  string email = 1;
  string password = 2;
  string new_password = 3;
}

service AuthService {
  rpc BasicLogin(AuthBasicLoginRequest) returns (AuthResponse) {}
  rpc BasicRegister(AuthBasicRegisterRequest) returns (AuthResponse) {}
  rpc BasicUpdatePassword(AuthBasicUpdatePassword)
      returns (google.protobuf.Empty) {}
}